{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 52,
  "lineage": "4de1bb04-45e5-0780-aa2d-2297d526b422",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e92f72d0f809b32",
            "associate_with_private_ip": "10.0.16.43",
            "association_id": "eipassoc-0a3f0bfb5647bf2ec",
            "domain": "vpc",
            "id": "eipalloc-07e92f72d0f809b32",
            "instance": "i-0a4e3348f1b401e3e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-064cbb29becd4a95b",
            "private_dns": "ip-10-0-16-43.us-west-2.compute.internal",
            "private_ip": "10.0.16.43",
            "public_dns": "ec2-44-241-122-238.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.122.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-instance2",
            "aws_subnet.subnet2",
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f0b82bed6d2175b",
            "domain": "vpc",
            "id": "eipalloc-03f0b82bed6d2175b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-218-7-148.us-west-2.compute.amazonaws.com",
            "public_ip": "54.218.7.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:637423183440:instance/i-024cadae1712196f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024cadae1712196f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-053d9f1ad7b705b23",
            "private_dns": "ip-10-0-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-3-235-23-81.compute-1.amazonaws.com",
            "public_ip": "3.235.23.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6dfe1e720f7b9ce",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06efc221fb3ded09c",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075e0a604a6c72de5"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1",
            "aws_vpc.MyVPC",
            "data.aws_ami.ami_amazonL"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0395649fbe870727e",
            "arn": "arn:aws:ec2:us-west-2:637423183440:instance/i-0a4e3348f1b401e3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4e3348f1b401e3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064cbb29becd4a95b",
            "private_dns": "ip-10-0-16-43.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.43",
            "public_ip": "44.241.122.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07aaa07378e173a49",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06eb6c9bdbeb9586f",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01114c37ed2ee4fc7"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet2",
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423183440:internet-gateway/igw-0411d3dd72727370a",
            "id": "igw-0411d3dd72727370a",
            "owner_id": "637423183440",
            "vpc_id": "vpc-099416c2aa5073f8b"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423183440:internet-gateway/igw-043ac0b5a005bf5c9",
            "id": "igw-043ac0b5a005bf5c9",
            "owner_id": "637423183440",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0fcbc4a196bb76099"
          },
          "dependencies": [
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f0b82bed6d2175b",
            "association_id": "eipassoc-01e39306a8915dd7d",
            "connectivity_type": "public",
            "id": "nat-0cbcd022083e4145b",
            "network_interface_id": "eni-0a47e0496513e5eeb",
            "private_ip": "10.0.16.177",
            "public_ip": "54.218.7.148",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06eb6c9bdbeb9586f",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            }
          },
          "dependencies": [
            "aws_eip.eip2",
            "aws_subnet.subnet2",
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423183440:security-group/sg-09f1424ba8c1323f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f1424ba8c1323f3",
            "ingress": [],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "637423183440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcbc4a196bb76099"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423183440:security-group/sg-047a4f80b705f279a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-047a4f80b705f279a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "637423183440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "timeouts": null,
            "vpc_id": "vpc-099416c2aa5073f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423183440:subnet/subnet-06efc221fb3ded09c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06efc221fb3ded09c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423183440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "vpc_id": "vpc-099416c2aa5073f8b"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423183440:subnet/subnet-06eb6c9bdbeb9586f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eb6c9bdbeb9586f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423183440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            },
            "vpc_id": "vpc-0fcbc4a196bb76099"
          },
          "dependencies": [
            "aws_vpc.vpc-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423183440:vpc/vpc-099416c2aa5073f8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0848adbfd74ca9d38",
            "default_route_table_id": "rtb-06b0884aeb77a2757",
            "default_security_group_id": "sg-075e0a604a6c72de5",
            "dhcp_options_id": "dopt-067d8942a2fb9b6bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099416c2aa5073f8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b0884aeb77a2757",
            "owner_id": "637423183440",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423183440:vpc/vpc-0fcbc4a196bb76099",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071c054c0d58f55ef",
            "default_route_table_id": "rtb-0624f50613fb27b89",
            "default_security_group_id": "sg-01114c37ed2ee4fc7",
            "dhcp_options_id": "dopt-0bfe11e71499124c1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcbc4a196bb76099",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0624f50613fb27b89",
            "owner_id": "637423183440",
            "tags": {
              "Name": "Robia"
            },
            "tags_all": {
              "Name": "Robia"
            }
          }
        }
      ]
    }
  ]
}